--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,12 +2,14 @@
 <resources>
     <string name="main_title">ScoreKeeper</string>
     <string name="app_name">ScoreKeeper</string>
-<string name="new_game_label">New Game</string>
-<string name="continue_game_label">Continue</string>
+<string name="reset_label">Reset Game</string>
+
 <string name="about_label">About</string>
 <string name="exit_label">Exit</string>
 <string name="about_text">ScoreKeeper is a simple app that allows you to keep score of multiple types of sporting events by touching buttons on the screen.</string>
 <string name="about_title">About ScoreKeeper</string>
 <string name="about_shortcut">a</string>
 <string name="exit_shortcut">x</string>
+<string name="score_us_label">Us</string>
+<string name="score_them_label">Them</string>
 </resources>
