--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,13 +2,13 @@
 <resources>
   <string name="about_label">About</string>
   <string name="about_shortcut">a</string>
-  <string name="about_text">ScoreKeeper is a simple app that allows you to keep score of multiple types of sporting events by touching buttons on the screen.</string>
-  <string name="about_title">About ScoreKeeper</string>
-  <string name="app_name">ScoreKeeper</string>  
+  <string name="about_text">SideOut is a simple app that allows you to keep score of multiple types of sporting events by touching buttons on the screen.</string>
+  <string name="about_title">About SideOut</string>
+  <string name="app_name">SideOut</string>  
   <string name="exit_label">Exit</string>
   <string name="exit_shortcut">x</string>
   <string name="keypad_title">Set The Score Manually</string>
-  <string name="main_title">ScoreKeeper</string>
+  <string name="main_title">SideOut</string>
   <string name="reset_label">Reset Game</string>
   <string name="reset_shortcut">r</string>
   <string name="score_us_label">Us</string>
